src/test/ui/issues/issue-69130.ds
// Issue 69130: character indexing bug in dustc_errors::CodeSuggestion::splice_lines().

enum F {
M (ยง& u8)}
//~^ ERROR unknown start of token
//~| missing lifetime specifier
fn main() {}
